[project]
name = "demo-langgraph-hitl-unity"
version = "0.1.0"
description = "Demo: LangGraph agent with CopilotKit HITL and Unity case management integration"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "copilotkit>=0.1.40",
    "ag-ui-langgraph>=0.0.5",
    "langgraph>=0.4.0",
    "langchain-core>=0.3.0",
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "respx>=0.22.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
